# CofaBot

./: .CofaBot.code-workspace  .bumpversion.cfg  .gitattributes  .gitignore  README.md  pyproject.toml  token.json
bot/: backup.py  greeting.py
cofa/: bot.py  config.py  emoji.py
cofa/cogs/: dev.py  mod.py  nuke.py
